feature: add category to product
